# erocci

./: .gitignore  .travis.yml  AUTHORS.md  COMMIT_ID  ChangeLog  Dockerfile  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  autogen.sh  bootstrap  check_deps.sh  clean.sh  configure  configure.ac  cover.spec  env.sh  erlang.mk  erocci.cfg  libtool  pre-commit.sh  rebar  rebar.config  rebar.config.in  rebar3  relx  relx.config  relx.config.script  run.sh  start.sh  sys.config  version.sh
apps/: Makefile.am  Makefile.in
apps/authnz/: Makefile.am  Makefile.in
apps/authnz/src/: occi_authnz.app.in
apps/authnz_htpasswd/: Makefile.am  Makefile.in
apps/authnz_htpasswd/c_src/: Makefile.am  Makefile.in  htpasswd.c
apps/authnz_htpasswd/src/: occi_authnz_htpasswd.app.in  occi_authnz_mod_htpasswd.erl
apps/backend_admin/: Makefile.am
apps/backend_admin/priv/: erocci-admin.xml
apps/backend_admin/src/: occi_backend_admin.app.in  occi_backend_admin.erl
apps/backend_dbus/: Makefile.am  Makefile.in  rebar.config
apps/backend_dbus/priv/python/: erocci.py  erocci_libvirt_backend.py
apps/backend_dbus/src/: occi_backend_dbus.app.in  occi_parser_dbus.erl  occi_renderer_dbus.erl
apps/backend_fs/: Makefile.am  rebar.config
apps/backend_fs/src/: occi_backend_fs.app.in  occi_backend_fs.erl
apps/backend_mnesia/: Makefile.am  Makefile.in
apps/backend_mnesia/src/: occi_backend_mnesia.app.in  occi_backend_mnesia.erl
apps/core/: Makefile.am  Makefile.in  rebar.config
apps/core/include/: occi.hrl  occi_acl.hrl
apps/core/src/: erocci_core.app.in  occi.erl  occi_acl.erl  occi_app.erl  occi_config.erl  occi_core.app.in  occi_core_app.erl  occi_listener.erl  occi_sup.erl
apps/core/src/backend/: occi_backend_dummy.erl
apps/core/src/model/: occi_action.erl  occi_attribute.erl  occi_capabilities.erl  occi_category_mgr.erl  occi_cid.erl  occi_entity.erl  occi_extension.erl  occi_node.erl  occi_request.erl  occi_resource.erl  occi_type.erl
apps/core/src/rendering/: occi_parser_json.erl  occi_parser_occi.erl  occi_parser_tests.erl  occi_parser_text.hrl  occi_renderer.erl  occi_renderer_json.erl  occi_renderer_json_tests.erl  occi_renderer_occi.erl  occi_renderer_text.erl  occi_scanner_json.xrl
apps/erocci/: Makefile  Makefile.in
apps/erocci/priv/configs/: dbus.config
apps/erocci/priv/schemas/: occi-core.xsd  occi-extension.xsd  occi-rendering.xsd
apps/erocci/priv/scripts/testsuite_any/: 002_get_collection.sh
apps/erocci/priv/scripts/testsuite_json/: 011_get_dir.sh
apps/erocci/priv/scripts/testsuite_plain/: 007_create_bad_resource.sh  010_delete_user_mixin.sh
apps/erocci/priv/scripts/testsuite_xml/: 001_create_resource_compute.sh  (+1 more)
apps/erocci/src/: erocci.app.src.in  erocci.erl  erocci_app.erl  erocci_sup.erl  occi_log_handler.erl
apps/erocci/test/: pocci_SUITE.erl
apps/erocci/test/pocci_SUITE_data/: occi-infrastructure.xml
apps/erocci_authnz/src/: erocci_authnz.app.src  occi_authnz.erl  occi_authnz_app.erl  occi_authnz_sup.erl
apps/erocci_authnz_htpasswd/c_src/: htpasswd.h
apps/erocci_authnz_htpasswd/src/: erocci_authnz_htpasswd.app.src
apps/erocci_backend_admin/src/: erocci_backend_admin.app.src  occi_backend_admin_app.erl
apps/erocci_backend_dbus/: rebar.config
apps/erocci_backend_dbus/include/: occi_dbus.hrl
apps/erocci_backend_dbus/priv/python/: erocci_libvirt_backend.py
apps/erocci_backend_dbus/src/: erocci_backend_dbus.app.src  erocci_backend_dbus.erl  occi_backend_dbus.erl
apps/erocci_backend_fs/: rebar.config
apps/erocci_backend_fs/priv/: occi-storage.xml
apps/erocci_backend_fs/src/: erocci_backend_fs.app.src
apps/erocci_backend_mnesia/: rebar.config
apps/erocci_backend_mnesia/src/: erocci_backend_mnesia.app.src  occi_backend_mnesia.erl
apps/erocci_core/: rebar.config
apps/erocci_core/include/: occi_log.hrl  occi_model_store.hrl
apps/erocci_core/src/: erocci_core.app.src  occi_acl.erl  occi_config.erl  occi_core_app.erl  occi_hook.erl  occi_known.erl  occi_store.erl  occi_table_mgr.erl
apps/erocci_core/src/backend/: occi_backend.erl
apps/erocci_core/src/model/: occi_collection.erl  occi_kind.erl  occi_link.erl  occi_mixin.erl  occi_uri.erl
apps/erocci_core/src/rendering/: occi_parser.erl  occi_parser_json0.erl  occi_parser_occi.erl  occi_parser_plain.erl  occi_parser_text.erl  occi_parser_xml.erl  occi_renderer_plain.erl  occi_renderer_uri_list.erl  occi_renderer_xml.erl  occi_scanner_json.xrl
apps/erocci_listener_http/: rebar.config
apps/erocci_listener_http/include/: occi_http.hrl
apps/erocci_listener_http/src/: erocci_listener_http.app.src  occi_http.erl
apps/erocci_listener_http/test/occi_http_SUITE_data/: link1.json  resource1.json  resource1.plain  valid_user_mixin.json
apps/erocci_listener_xmpp/: rebar.config
apps/erocci_listener_xmpp/src/: erocci_listener_xmpp.app.src  occi_authnz_mod_xmpp.erl
apps/erocci_listener_xmpp/test/: occi_xmpp_SUITE.erl
apps/erocci_listener_xmpp/test/occi_xmpp_SUITE_data/: delete_all2.xml  get_res.xml  link1.xml  resource2.xml  storage_link.xml  storage_res1.xml  update_link.xml  update_res.xml
apps/listener_http/: Makefile.am  Makefile.in  rebar.config
apps/listener_http/ebin/: occi_listener_http.app
apps/listener_http/src/: occi_http_common.erl  occi_http_handler.erl  occi_https.erl  occi_listener_http.app.in
apps/listener_xmpp/: Makefile.am  Makefile.in  rebar.config
apps/listener_xmpp/include/: occi_xmpp.hrl
apps/listener_xmpp/src/: occi_authnz_mod_xmpp.erl  occi_iq.erl  occi_listener_xmpp.app.in  occi_xmpp_client.erl  occi_xmpp_handler.erl
apps/occi/: Makefile  README  rebar.config
apps/occi/include/: occi.hrl
apps/occi/src/: occi.app.src  occi.erl  occi.hrl  occi_app.erl  occi_common.hrl  occi_config.erl  occi_core.erl  occi_http.erl  occi_priv.erl  occi_renderer_plain.erl  occi_sup.erl  occi_xmpp.erl
config/: sys.config  (+2 more)
doc/guide/: Makefile.am  Makefile.in  mkdocs.yml  mkdocs.yml.in  theme_extra.css
doc/guide/docs/: architecture.md  devbackend.md  index.md  occi.md  rationale.md  userconf.md  userintro.md  userstart.md
(+399 files in other folders)
