# Copyright 2015 Jean Parpaillon, all rights reserved
#
# This file is provided to you under the Apache License,
# Version 2.0 (the "License"); you may not use this file
# except in compliance with the License.  You may obtain
# a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#
SUBDIRS = apps

#DEPS = jiffy erim_xml uuid uri erocci_listener_http erocci_listener_xmpp erocci_backend_mnesia erocci_authnz_htpasswd
#dep_jiffy = git git://github.com/davisp/jiffy.git 0.9.0
#dep_erim_xml = git git://github.com/lizenn/erim_xml.git master
#dep_uuid = git git://gitorious.org/avtobiff/erlang-uuid.git v0.4.6
#dep_uri = git git://github.com/heroku/uri.git master
#dep_erocci_authnz = git git://github.com/erocci/erocci_authnz.git master
#dep_erocci_listener_http = git://github.com/erocci/erocci_listener_http.git master
#dep_erocci_listener_xmpp = git://github.com/erocci/erocci_listener_xmpp.git master
#dep_erocci_backend_mnesia = git://github.com/erocci/erocci_backend_mnesia.git master
#dep_erocci_authnz_htpasswd = git://github.com/erocci/erocci_authnz_htpasswd.git master

#ERLC_OPTS = -Ideps/*/include -Iapps/*/include -Ideps -I.

@ERLANG_MK@
